# modsh

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-BSL  POSIX.md  README.md  TODO.md
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
modsh-ai/: Cargo.toml
modsh-ai/src/: context.rs  feedback.rs  inference.rs  lib.rs  retriever.rs
modsh-cli/: Cargo.toml
modsh-cli/src/: main.rs
modsh-cli/tests/: posix.rs
modsh-core/: Cargo.toml
modsh-core/fuzz/: Cargo.toml
modsh-core/fuzz/fuzz_targets/: fuzz_target_1.rs
modsh-core/src/: builtins.rs  executor.rs  expander.rs  jobcontrol.rs  lexer.rs  lib.rs  parser.rs
modsh-core/src/lexer/: core.rs  mod.rs  token.rs
modsh-interactive/: Cargo.toml
modsh-interactive/src/: autosuggest.rs  complete.rs  editor.rs  highlight.rs  history.rs  lib.rs  plugin.rs  prompt.rs
