[workspace]
members = ["modsh-core", "modsh-interactive", "modsh-ai", "modsh-cli"]
resolver = "2"
exclude = ["modsh-core/fuzz"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["modsh contributors"]
license = "Apache-2.0"
repository = "https://github.com/modsh/modsh"
rust-version = "1.70"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Terminal/crossterm
crossterm = "0.29"

# SQLite for context graph
rusqlite = { version = "0.39", features = ["bundled"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Testing
pretty_assertions = "1.4"

# Glob pattern matching
glob = "0.3"
