[package]
name = "modsh-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "BSL-1.1"
repository.workspace = true
rust-version.workspace = true
description = "AI context engine for modsh"

[dependencies]
modsh-core = { path = "../modsh-core" }

rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls"] }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
