[package]
name = "modsh-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "modsh — Modern shell with AI context"

[[bin]]
name = "modsh"
path = "src/main.rs"

[dependencies]
modsh-core = { path = "../modsh-core" }
modsh-interactive = { path = "../modsh-interactive" }
modsh-ai = { path = "../modsh-ai" }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
