[package]
name = "modsh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "POSIX-compatible shell core for modsh"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
glob = { workspace = true }
tempfile = "3.27.0"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
